[package]
name = "iouring-worker-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
io-uring = "0.5"
libc = { version = "0.2.98", default-features = false }
anyhow = "1"
lab = "0.4"
nix = "0.23.1"
structopt = { version = "0.3", default-features = false }

[[bin]]
name = "udp-read"
path = "src/main.rs"
